--- a/index.html
+++ b/index.html
@@ -41,10 +41,8 @@
     </div>
 
     <div class="container" id="bsr-wrapper">
-        <h1>Heading 1</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid eveniet fugit exercitationem earum quod. Ad
-            doloribus dignissimos quaerat error aspernatur est, voluptatem deserunt at, dolores asperiores incidunt
-            eligendi commodi sapiente.</p>
+        <h1>Impact vs Energy</h1>
+        <p>The graph below shows the impact of each fireball against the energy each fireball had. Notice that there is usually a direct relation, where a greater impact is correlated to a greater energy. Also, notice that there is a line that no points ever cross, where the impact is never greater than that ratio's energy.</p>
     </div>
 
     <div class='row d-flex flex-row flex-wrap justify-content-center'>
